16423
Compiling the code below generates "error: traits or objects may not have parameters" for the diamond.
{noformat}
C:\scala-2.9.1.final\examples>scalac parametersproblem.scala
parametersproblem.scala:22: error: traits or objects may not have parameters
    class Num(v: Int) extends super[Left].Num(v) with super[Right].Num(v)
                                                                      ^
one error found
{noformat}
{code}
trait Top {
    class Num(val value: Int) 
}

trait Left extends Top  

trait Right extends Top {
    class Num(v: Int) extends super.Num(v) 
}

trait BottomLeftOnly extends Left { //compiles
    class Num(v: Int) extends super[Left].Num(v)   
} 

trait BottomRightOnly extends Right { //compiles
    class Num(v: Int) extends super[Right].Num(v)    
}

trait BottomDiamond extends Left with Right { // compile error: traits or objects may not have parameters
    class Num(v: Int) extends super[Left].Num(v) with super[Right].Num(v)    
} 
{code}
